--- a/Smart-cycle-market/Server/package.json
+++ b/Smart-cycle-market/Server/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^8.8.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
